# YAParser

./: CMakeLists.txt  README.md  parse.cpp
benchmarks/Perceptron/: perceptron.ir  perceptron.opl  perceptron.zok
benchmarks/Spline/: cubic_spline_v16.ir  cubic_spline_v16.opl  cubic_spline_v16.zok  cubic_spline_v4.ir  cubic_spline_v4.opl  cubic_spline_v4.zok  cubic_spline_v8.ir  cubic_spline_v8.opl  cubic_spline_v8.zok
benchmarks/_ignore/: gt_test.zok  mul_30.ir  mul_30.zok  mul_v16.ir  mul_v16.zok  mul_v32.ir  mul_v32.zok  mul_v8.ir  mul_v8.zok
benchmarks/chi_squared/: chi_squared.ir  chi_squared.zok
benchmarks/dot_product/: dot_product_v128.ir  dot_product_v128.zok  dot_product_v16.ir  dot_product_v16.zok  dot_product_v32.ir  dot_product_v32.zok  dot_product_v64.ir  dot_product_v64.zok  dot_product_v8.ir  dot_product_v8.zok
benchmarks/euclidean_distance/: euclidean_distance_v128.ir  euclidean_distance_v128.zok  euclidean_distance_v16.ir  euclidean_distance_v16.zok  euclidean_distance_v32.ir  euclidean_distance_v32.zok  euclidean_distance_v64.ir  euclidean_distance_v64.zok  euclidean_distance_v8.ir  euclidean_distance_v8.zok
benchmarks/factorial/: factorial_v12.ir  factorial_v12.zok  factorial_v13.ir  factorial_v13.zok  factorial_v14.ir  factorial_v14.zok  factorial_v15.ir  factorial_v15.zok  factorial_v16.ir  factorial_v16.zok  factorial_v5.ir  factorial_v5.zok  factorial_v8.ir  factorial_v8.zok
benchmarks/fibonacci/: fibonacci_20.ir  fibonacci_20.zok  fibonacci_v128.ir  fibonacci_v128.zok  fibonacci_v16.ir  fibonacci_v16.zok  fibonacci_v32.ir  (+5 more)
(+38 files in other folders)
